# legacy-wallet

./: .env.example  .gitignore  .gitmodules  ALL_CODE_FOR_CHATGPT.md  CORS_RULES.md  DilithiumVerifier.t.sol  Dockerfile.dev  Gas.t.sol  HybridFlow.t.sol  Makefile  README.md  README_DEV.md  add-sig.js  api-server-3002.js  api-server.js  baseline-qsafe-scan.json  dilithium.sig  dilithium5_pub.key  dilithium5_sec.key  docker-compose.dev.yml  eth.html  eth.js  jest.config.js  offer.yaml  package-lock.json  package.json  q-dev-chat-2025-07-22.md  real-api-3003.js  real-api.js  repo-tree.txt  scan-result.json  sign.js  start-services.sh  test-zkvm-flow.js  validate-boundless.sh  wallet.js  wallet.json
.cargo/: config.toml
.github/workflows/: ci.yml  onchain.yml
A_extra/: RegisterPQ.jsx
__tests__/: dilithium.test.js  dilithium.wasm.test.js  falcon.test.js  wallet.flow.test.js
boundless-service/: Cargo.toml
boundless-service/src/: audit_input.rs  main.rs
cache/: solidity-files-cache.json
contracts/: Groth16Verifier.sol  HybridWallet.sol  HybridWalletFactory.sol  TrustlessVerifier.sol  deploy-registry.js  deploy-simple.js  deploy.js  hardhat.config.js  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: HybridWallet.sol  HybridWalletFactory.sol  QuantumSafeWallet.sol  SessionRegistry.sol  SessionRootRegistry.sol  SimpleQuantumWallet.sol  TrustlessVerifier.sol
demo/: dilithium.js  eth.html  eth.js  index.html  main.js
dilithium-zkvm/: .env  Cargo.toml  README.md  build.sh  test_keypair.json
dilithium-zkvm/contracts/: DilithiumVerifier.sol  TrustlessVerifier.sol
dilithium-zkvm/host/: Cargo.toml
dilithium-zkvm/host/src/: main.rs
dilithium-zkvm/integration/: RiscZeroVerification.jsx  serve.sh  test.html
dilithium-zkvm/methods/: Cargo.toml
dilithium-zkvm/methods/guest/: Cargo.toml
dilithium-zkvm/methods/guest/src/: dilithium.rs  getrandom_shim.rs  main.rs
dilithium-zkvm/tests/: integration_test.rs
dilithium-zkvm/wallet/: Cargo.toml
dilithium-zkvm/wallet/src/: main.rs
dilithium-zkvm/zkvm-service/: chainUtils.js  merkle-utils.js  native-dilithium.js  package-lock.json  package.json  server-fast.js  server.js  server.js.bak  session-precompute.js  sessionStore.js  start.sh  true-native-dilithium.js
foundry-contracts/cache/: solidity-files-cache.json
foundry-contracts/script/: Deploy.s.sol
qsafe-signer/: crypto.mjs  falcon.mjs  kyber-sign.js  kyber.mjs  package-lock.json  package.json  persistence.mjs  signer.js
qsafe-signer/src/: dilithium.js  (+1 more)
qsafe-ui/: .env  debug.html  index.html  package-lock.json  package.json  serve.sh  vite.config.js
quantaseal-onchain/: foundry.toml
scripts/: verifyAndMigrate.ts
server/: signPQ.js
tools/: Cargo.toml  apply_patch.sh  encode_input.rs
zk-prover/guest/: Cargo.toml
zk-prover/guest/src/: lib.rs
zk-prover/host/: Cargo.toml
zk-prover/host/src/: main.rs
zkvm-guest/: Cargo.toml
(+56 files in other folders)
