[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"