[package]
name    = "guest"
version = "0.1.0"
edition = "2024"

# zk-prover/guest/Cargo.toml
[dependencies]
risc0-zkvm-guest = "0.11.1"

# <-- change starts here -----------------------------
ml-dsa = { git = "https://github.com/RustCrypto/signatures",package = "ml-dsa",default-features = false,features = ["alloc", "pkcs8"] }
# <-- change ends here -------------------------------



sha3 = "0.10"

[patch.crates-io]
der   = { git = "https://github.com/RustCrypto/formats", package = "der" }
pkcs8 = { git = "https://github.com/RustCrypto/formats", package = "pkcs8" }