[package]
name    = "host"
version = "0.1.0"
edition = "2024"             # 2021 is fine too – keep whichever you prefer

[dependencies]

risc0-zkvm   = { version = "0.11.1", features = [ "prove"] } 


sha3         = "0.10"
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
hex          = "0.4"

# If you later want CUDA / Metal proving speed-ups on this box,
# just add the extra flag(s) here:
# features = ["prove", "client", "groth16", "cuda"]   # or "metal"
